backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backdeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backendapp
  template:
    metadata:
      labels:
        app: backendapp
    spec:
      containers:
      - name: easybackend
        image: omkarsahastrabudhe/backend:v2
        ports:
          - containerPort:  8080

---
apiVersion: v1
kind: Service
metadata: 
    name: backendservice
spec: 
   type: ClusterIP
   selector: 
      app: backendapp
   ports:
     - port: 8080
       targetPort: 8080
