database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dbstatefull
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: dbservice
  replicas: 2
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: myapp
        image: mariadb
        ports:
        - containerPort: 3306
---
apiVersion: v1 
kind: Service
metadata:
   name: dbservice
spec:
   type: ClusterIP
   selector: 
     app: mariadb
   ports:
     - port: 3306
       targetPort: 3306
