frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: omkarsahastrabudhe/frontend:v4
        resources:
          requests: 
             cpu: "128m"
             memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
            
            
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
   name: frontendservice
spec: 
   type: ClusterIP
   selector:
      app: frontend
   ports:
    - port : 80
      targetPort: 80
